fix: Correcting breakpoints and adapting elements width to it + disabling horizontal scroll

--- a/sass/homepage.scss
+++ b/sass/homepage.scss
@@ -18,6 +18,7 @@
     @include centered-block;
     background: #F6F6F6;
     visibility: visible;
+    overflow-x: hidden;
 }
 
 .header{
