--- a/sass/sections/media_queries/homepage/_tablet.scss
+++ b/sass/sections/media_queries/homepage/_tablet.scss
@@ -1,4 +1,4 @@
-@media (min-width : 641px) and (max-width : 950px) {
+@media (min-width : 768px) and (max-width : 1024px) {
 
     .homepage{
         width: 640px !important;
