--- a/sass/sections/media_queries/restaurant/_desktop.scss
+++ b/sass/sections/media_queries/restaurant/_desktop.scss
@@ -1,4 +1,4 @@
-@media (min-width : 950px) {
+@media (min-width : 1024px) {
     .menu__title, .menu__detail__text{
         overflow: visible !important;
         text-overflow: unset !important;
@@ -6,7 +6,7 @@
     .homepage-restaurant{
         background: #fff !important;
         .restaurant__img {
-           width: 1440px;
+           width: 100%;
            height: 383px;
            object-fit: cover;
         }
