--- a/sass/sections/media_queries/restaurant/_mobile.scss
+++ b/sass/sections/media_queries/restaurant/_mobile.scss
@@ -1,4 +1,4 @@
-@media (min-width : 640px) and (max-width : 950px) {
+@media (min-width : 768px) and (max-width : 1024px) {
     .menu__title, .menu__detail__text{
         overflow: visible !important;
         text-overflow: unset !important;
